--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
+    "brcypt": "^1.0.1",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
